# Traceloom

./: .gitignore  04_schema_v1.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: build-companion-executable.yml  validate-artifacts.yml
examples/invalid/: README.md
examples/user-tag-bulk-import/: 01_brief.md  02_prd.md  06_release_review.md
examples/user-tag-bulk-import-versioned/: 04_execution_plan.md  07_release_review_v0_2.md  08_prd_v0_2.md  11_test_acceptance_v0_2.md  12_brief_v0_2.md  README.md
pyinstaller/: traceloom.spec
scripts/: smoke_companion_bundle.py  sync_bundled_assets.py
templates/minimal-requirement-repo/: 01_brief.md  (+1 more)
tests/: git_fixture_helpers.py  test_artifact_io.py  test_bootstrap.py  test_bundled_assets.py  test_cli.py  test_defaults.py  test_design_checks.py  test_draft_templates.py  test_example_fixtures.py  test_example_workflow_contract.py  test_guided_actions.py  test_mcp_server.py  test_navigation.py  test_parser.py  test_public_docs_surface.py  test_queries.py  test_repository.py  test_repository_layout.py  test_schema_contract.py  test_summaries.py  test_validators.py  test_workflows.py  test_workspaces.py  test_write_ops.py
traceloom/: __init__.py  __main__.py  artifact_io.py  bootstrap.py  bundled_assets.py  cli.py  defaults.py  design_checks.py  draft_templates.py  guided_actions.py  mcp_server.py  models.py  navigation.py  parser.py  queries.py  repository.py  summaries.py  validators.py  workflows.py  workspaces.py  write_ops.py
(+58 files in other folders)
